--- a/src/main/resources/properties/QuerySQLs.properties
+++ b/src/main/resources/properties/QuerySQLs.properties
@@ -1,2 +1,7 @@
 GET_ALL_PLAYERS = SELECT id_player, nick_name, password, ballance FROM farmdb.players
 ADD_PLAYER = INSERT INTO farmdb.players (nick_name, password, ballance) VALUES (?,?,?)
+GET_PLAYER_BY_NICK = SELECT id_player, nick_name, password, ballance FROM farmdb.players WHERE nick_name = ?
+GET_FIELD_BY_USER_ID = SELECT id_player, nick_name, password, ballance FROM farmdb.fields WHERE player_id = ?
+ADD_NEW_EMPTY_CELL = INSERT INTO farmdb.cell (pos_x, pos_y, field_id, cell_type_id, type_id) VALUES (?,?,?, 1, 1);
+UPDATE_CELL = INSERT INTO farmdb.cell (pos_x, pos_y, field_id, cell_type_id, type_id) VALUES (?,?,1,?,?,, 3, 1, 1, 1);
+GET_CELLS_BY_FIELD_ID = SELECT cell_type.name, cell.cell_type_id, cell.planted, cell.pos_x, cell.pos_y FROM cell, cell_type WHERE  cell.cell_type_id = cell_type.id_cell_type and field_id = ?
