--- a/src/main/resources/properties/QuerySQLs.properties
+++ b/src/main/resources/properties/QuerySQLs.properties
@@ -4,5 +4,8 @@ GET_PLAYER_BY_NICK = SELECT id_player, nick_name, password, ballance FROM farmdb
 GET_FIELD_BY_USER_ID = SELECT player_id, id_field FROM farmdb.fields WHERE player_id = ?
 ADD_FIELD_BY_USER_ID = INSERT INTO farmdb.fields (player_id) VALUES (?)
 ADD_NEW_EMPTY_CELL = INSERT INTO farmdb.cell (pos_x, pos_y, field_id, cell_type_id, type_id) VALUES (?,?,?, 1, 1);
-UPDATE_CELL = INSERT INTO farmdb.cell (pos_x, pos_y, field_id, cell_type_id, type_id) VALUES (?,?,1,?,?,, 3, 1, 1, 1);
-GET_CELLS_BY_FIELD_ID = SELECT cell_type.name, cell.cell_type_id, cell.planted, cell.pos_x, cell.pos_y FROM cell, cell_type WHERE  cell.cell_type_id = cell_type.id_cell_type and field_id = ?
+GET_CELLS_BY_FIELD_ID = SELECT cell_type.name, cell.cell_type_id, cell.planted, cell.pos_x, cell.pos_y FROM farmdb.cell, farmdb.cell_type WHERE  cell.cell_type_id = cell_type.id_cell_type and field_id = ?
+GET_ALL_PLANTS = SELECT id_plant, grow_time, name, price, proseed FROM farmdb.plants
+UPDATE_CELL = UPDATE farmdb.cell SET planted = ?, cell_type_id = ?, type_id = ? WHERE  pos_x = ?, pos_y = ?, field_id = ?
+UPDATE_PLAYER_BALLANCE = UPDATE farmdb.player SET ballance = ? WHERE id_player = ?
+UPDATE_ALL_CELL_IN_FIELD = UPDATE farmdb.cell SET planted = ?, cell_type_id = ?, type_id = ? WHERE  pos_x = ?, pos_y = ?, field_id = ?
