выводит коректоно все сооружения и бонусы

--- a/src/main/resources/properties/QuerySQLs.properties
+++ b/src/main/resources/properties/QuerySQLs.properties
@@ -9,4 +9,4 @@ GET_ALL_PLANTS = SELECT id_plant, grow_time, name, price, proseed FROM farmdb.pl
 UPDATE_CELL = UPDATE farmdb.cell SET planted = ?, cell_type_id = ?, type_id = ? WHERE  pos_x = ? and pos_y = ? AND field_id = ?
 UPDATE_PLAYER_BALLANCE = UPDATE farmdb.players SET ballance = ? WHERE id_player = ?
 UPDATE_ALL_CELL_IN_FIELD = UPDATE farmdb.cell SET planted = ?, cell_type_id = ?, type_id = ? WHERE  pos_x = ?, pos_y = ?, field_id = ?
-GET_ALL_BUILDINGS = SELECT id_building, bonus_id, name, price FROM farmdb.buildings
+GET_ALL_BUILDINGS = SELECT id_building,id_bonus, building_bonuces.name AS bonus_name, buildings.name AS building_name, proseed, price, building_bonuces.time FROM farmdb.buildings, farmdb.building_bonuces WHERE buildings.bonus_id = building_bonuces.id_bonus
