добавлена функция сбора урожая. Пока работает некоректно

--- a/src/main/resources/properties/gameCommands.properties
+++ b/src/main/resources/properties/gameCommands.properties
@@ -11,7 +11,7 @@
 #    SET PLANT Арбуз TO 2 1
 
 #PICK UP FROM "X" "Y" - собрать урожай из клетки
-#    SET PLANT баклажан TO 2 1
+#    PICK UP FROM 2 1
 
 #DEL PLANT "X" "Y" - ВЫКОРЧЕВАТЬ РАСТЕНИЕ
 #    DEL PLANT 2 2
