--- a/src/main/resources/properties/gameCommands.properties
+++ b/src/main/resources/properties/gameCommands.properties
@@ -8,7 +8,7 @@
 #GET AV Р - ПОСМОТРЕТЬ ДОСТУПНЫЕ растения
 
 #SET PLANT "PLANT NAME" TO "X" "Y" - посадить растение в клетку
-#    SET PLANT Арбуз TO 2 1
+#    SET PLANT WHEET TO 3 1
 
 #PICK UP FROM "X" "Y" - собрать урожай из клетки
 #    PICK UP FROM 2 1
