После Андр корективов

--- a/src/main/resources/properties/gameCommands.properties
+++ b/src/main/resources/properties/gameCommands.properties
@@ -7,24 +7,24 @@
 # растения
 #GET AV Р - ПОСМОТРЕТЬ ДОСТУПНЫЕ растения
 
-#SET PLANT "PLANT NAME" TO "X" "Y" - посадить растение в клетку
-#    SET PLANT WHEET TO 3 1
+#SET Plant "Plant NAME" TO "X" "Y" - посадить растение в клетку
+#    SET Plant WHEET TO 3 1
 
 #PICK UP FROM "X" "Y" - собрать урожай из клетки
 #    PICK UP FROM 2 1
 
-#DEL PLANT "X" "Y" - ВЫКОРЧЕВАТЬ РАСТЕНИЕ
-#    DEL PLANT 2 2
+#DEL Plant "X" "Y" - ВЫКОРЧЕВАТЬ РАСТЕНИЕ
+#    DEL Plant 2 2
 
 
 
 #строения
 #GET AV B - ПОСМОТРЕТЬ ДОСТУПНЫЕ ЗДАНИЯ
 
-#SET BUILDING "BUILDING NAME" TO "X" "Y" - построить растение в клетку
-#    SET BUILDING генератор TO 1 1
+#SET Building "Building NAME" TO "X" "Y" - построить растение в клетку
+#    SET Building генератор TO 1 1
 
-#DEL BUILDING "X" "Y" - РАЗРУШИТЬ ЗДАНИЕ
-#    DEL BUILDING 2 2
+#DEL Building "X" "Y" - РАЗРУШИТЬ ЗДАНИЕ
+#    DEL Building 2 2
 
 
