переделал  доступ к карте мира. В авторизации добавлено создание поля на карте мира.

--- a/src/main/resources/properties/QuerySQLs.properties
+++ b/src/main/resources/properties/QuerySQLs.properties
@@ -14,3 +14,4 @@ GET_AREA_CELL_BY_FIELD_ID =  SELECT id_area_cell, id_area, id_farm, id_type_area
  GET_CELLS_BY_AREA_ID = SELECT area_cells.id_area_cell,area_cells.id_area,  area_cells.id_farm, area_cells.id_type_area_cell, area_cells.x, area_cells.y, type_name FROM (farmdb.area_cells INNER JOIN farmdb.areas ON area_cells.id_area = areas.id_area)INNER JOIN farmdb.area_cell_types ON area_cells.id_type_area_cell = area_cell_types.id_type WHERE area_cells.id_type_area_cell  = area_cell_types.id_type AND area_cells.id_area = ?
 GET_AREA_BY_ID = SELECT id_area, x, y FROM farmdb.areas WHERE id_area = ?
 GET_ALL_AREAS = SELECT id_area, x, y FROM farmdb.areas 
+UPDATE_AREA_CELL = UPDATE farmdb.area_cells SET id_farm = ?, id_type_area_cell = ? WHERE id_area_cell = ?
