Пофиксил. Посадку растений и строений. Садит коректно после авторизации и после регистрации. собираются растниятоже кореткно.

--- a/help/db.properties
+++ b/help/db.properties
@@ -1,4 +1,4 @@
 username=root
-password=root
+password=1111
 url=jdbc:mysql://localhost:3306/?allowMultiQueries=true&dontTrackOpenResources=true
 conn_default=10
