--- a/src/main/resources/properties/QuerySQLs.properties
+++ b/src/main/resources/properties/QuerySQLs.properties
@@ -5,11 +5,11 @@ GET_FIELD_BY_USER_ID = SELECT player_id, id_field FROM farmdb.fields WHERE playe
 ADD_FIELD_BY_USER_ID = INSERT INTO farmdb.fields (player_id) VALUES (?)
 ADD_NEW_EMPTY_CELL = INSERT INTO farmdb.cell (pos_x, pos_y, field_id, cell_type_id, type_id) VALUES (?,?,?, 1, 1);
 GET_CELLS_BY_FIELD_ID = SELECT cell_type.name, cell.type_id, cell.planted, cell.pos_x, cell.pos_y FROM farmdb.cell, farmdb.cell_type WHERE  cell.cell_type_id = cell_type.id_cell_type AND field_id = ?
-GET_ALL_PLANTS = SELECT id_plant, grow_time, name, price, proseed FROM farmdb.plants
+GET_ALL_PLANTS = SELECT id_plant, grow_time, name, price, proceed FROM farmdb.plants
 UPDATE_CELL = UPDATE farmdb.cell SET planted = ?, cell_type_id = ?, type_id = ? WHERE  pos_x = ? and pos_y = ? AND field_id = ?
 UPDATE_PLAYER_BALLANCE = UPDATE farmdb.players SET ballance = ? WHERE id_player = ?
 UPDATE_ALL_CELL_IN_FIELD = UPDATE farmdb.cell SET planted = ?, cell_type_id = ?, type_id = ? WHERE  pos_x = ?, pos_y = ?, field_id = ?
-GET_ALL_BUILDINGS = SELECT id_building,id_bonus, building_bonuces.name AS bonus_name, buildings.name AS building_name, proseed, price, building_bonuces.time FROM farmdb.buildings, farmdb.building_bonuces WHERE buildings.bonus_id = building_bonuces.id_bonus
+GET_ALL_BUILDINGS = SELECT id_building,id_bonus, building_bonuces.name AS bonus_name, buildings.name AS building_name, proceed, price, building_bonuces.time FROM farmdb.buildings, farmdb.building_bonuces WHERE buildings.bonus_id = building_bonuces.id_bonus
 GET_AREA_CELL_BY_FIELD_ID =  SELECT id_area_cell, id_area, id_farm, id_type_area_cell, x, y, type_name FROM farmdb.area_cells, farmdb.area_cell_types WHERE area_cells.id_type_area_cell  = area_cell_types.id_type AND id_farm = ?
  GET_CELLS_BY_AREA_ID = SELECT area_cells.id_area_cell,area_cells.id_area,  area_cells.id_farm, area_cells.id_type_area_cell, area_cells.x, area_cells.y, type_name FROM (farmdb.area_cells INNER JOIN farmdb.areas ON area_cells.id_area = areas.id_area)INNER JOIN farmdb.area_cell_types ON area_cells.id_type_area_cell = area_cell_types.id_type WHERE area_cells.id_type_area_cell  = area_cell_types.id_type AND area_cells.id_area = ?
 GET_AREA_BY_ID = SELECT id_area, x, y FROM farmdb.areas WHERE id_area = ?
